--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -127,7 +127,6 @@ kernel = {
   common = kern/rescue_reader.c;
   common = kern/term.c;
   common = kern/sha1.c;
-  common = kern/tpm.c;
 
   noemu = kern/compiler-rt.c;
   noemu = kern/mm.c;
@@ -225,8 +224,6 @@ kernel = {
   i386_pc = kern/i386/pc/tpm.c;
   i386_pc = term/i386/pc/console.c;
   i386_pc = kern/i386/pc/tpm/tpm_kern.c;
-
-  x86_64_efi = kern/efi/tpm/tpm_kern.c;
 
   i386_qemu = bus/pci.c;
   i386_qemu = kern/vga_init.c;
@@ -2428,12 +2425,14 @@ module = {
 module = {
   name = tpm;
 
+  common = kern/tpm.c;
+  common = kern/sha1.c;
+
   i386_pc = tpm/i386/pc/tpm.c;
 
   x86_64_efi = tpm/efi/tpm.c;
   x86_64_efi = kern/efi/tpm/tpm_kern.c;
-  x86_64_efi = kern/sha1.c;
-  x86_64_efi = kern/tpm.c;
+  x86_64_efi = kern/efi/tpm.c;
 
   enable = x86_64_efi;
 };
