--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -127,6 +127,7 @@ kernel = {
   common = kern/rescue_reader.c;
   common = kern/term.c;
   common = kern/sha1.c;
+  common = kern/tpm.c;
 
   noemu = kern/compiler-rt.c;
   noemu = kern/mm.c;
@@ -196,6 +197,7 @@ kernel = {
   x86_64_efi = kern/x86_64/efi/callwrap.S;
   x86_64_efi = kern/i386/efi/init.c;
   x86_64_efi = bus/pci.c;
+  x86_64_efi = kern/efi/tpm/tpm_kern.c;
 
   xen = kern/i386/tsc.c;
   xen = kern/i386/xen/tsc.c;
